--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "f394a5f3-03d6-49b3-bd19-85eb1d0ebcd0",
    "metadata": {},
    "outputs": [],
@@ -33,28 +33,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "f835d094-e1eb-49a6-b2a2-5e37691239bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_list = [] # list of dicts\n",
+    "meta_list = [] # list of dicts\n",
+    "data_list = []\n",
     "for dir in dir_list:\n",
     "    file_list = glob.glob(os.path.join(dir, '*.json'))\n",
     "    result_count = 0\n",
+    "    temp = []\n",
     "    name = \"\"\n",
     "    for file in file_list:\n",
     "        f = open(file) # file is a path to a json file\n",
     "        data = json.load(f)\n",
     "        name = file.split('/')[-2].split('search_')[-1]\n",
     "        result_count = result_count + data['meta']['result_count']\n",
+    "        temp = np.concatenate((temp, data['data']))\n",
     "        f.close()\n",
-    "    data_list.append({'name': name, 'result_count': result_count})"
+    "    meta_list.append({'name': name, 'result_count': result_count})\n",
+    "    data_list.append({'name': name, 'data': temp})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
+   "id": "d95f45c6-3388-40e8-979d-ccc4e1b50c14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   name                                               data\n",
+      "0                                                                       []\n",
+      "1  Leon Deandre Simpson  [{'text': 'Leon Deandre Simpson, 39 : #IHateTi...\n",
+      "2                                                                       []\n",
+      "3                                                                       []\n",
+      "4                                                                       []\n",
+      "data: (5333, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_data = pd.DataFrame(data_list)\n",
+    "print(text_data.head())\n",
+    "print(f'data: {text_data.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "7aa9414f-b8af-4878-9cf8-ca2b06a6d9d3",
    "metadata": {},
    "outputs": [
@@ -73,7 +103,7 @@
     }
    ],
    "source": [
-    "count_data = pd.DataFrame(data_list)\n",
+    "count_data = pd.DataFrame(meta_list)\n",
     "print(count_data.head())\n",
     "print(f'data: {count_data.shape}')"
    ]
@@ -112,7 +142,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "id": "96cb4e27-ce9a-4e16-b683-67719a5d24d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>result_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Antonio Centeno Rodriguez</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>Ernesto Ramos Jimenez</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>Emerson Arnold</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>Omar Enrique Garcia</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>469</th>\n",
+       "      <td>Dennis Todd Rogers</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4990</th>\n",
+       "      <td>Jaime Garcia Jr</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5008</th>\n",
+       "      <td>Anthony Xavier Jackson</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5026</th>\n",
+       "      <td>Jonathan Echevarria</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5217</th>\n",
+       "      <td>Alfred Longoria</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5239</th>\n",
+       "      <td>Richard Joseph Dambra</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>85 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           name  result_count\n",
+       "8     Antonio Centeno Rodriguez             4\n",
+       "162       Ernesto Ramos Jimenez             4\n",
+       "325              Emerson Arnold             4\n",
+       "387         Omar Enrique Garcia             4\n",
+       "469          Dennis Todd Rogers             4\n",
+       "...                         ...           ...\n",
+       "4990            Jaime Garcia Jr             4\n",
+       "5008     Anthony Xavier Jackson             4\n",
+       "5026        Jonathan Echevarria             4\n",
+       "5217            Alfred Longoria             4\n",
+       "5239      Richard Joseph Dambra             4\n",
+       "\n",
+       "[85 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_data[(count_data['result_count'] > 3) & (count_data['result_count'] < 5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "392f5be6-2c2f-469e-835a-965d610f40f6",
    "metadata": {},
    "outputs": [
@@ -240,7 +388,7 @@
        "5108                 Ming Wei Ma         19107"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e592f18a-b0e9-4170-af13-1ed54705cc8c",
+   "id": "263ff1c7-d305-457d-8986-b14030ef63c2",
    "metadata": {},
    "outputs": [],
    "source": []
