kernel restart error

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "f394a5f3-03d6-49b3-bd19-85eb1d0ebcd0",
    "metadata": {},
    "outputs": [],
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "f835d094-e1eb-49a6-b2a2-5e37691239bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_list = [] # list of dicts\n",
-    "# data_list = []\n",
+    "text_list = []\n",
     "for dir in dir_list:\n",
     "    file_list = glob.glob(os.path.join(dir, '*.json'))\n",
     "    result_count = 0\n",
@@ -51,14 +51,17 @@
     "        name = file.split('/')[-2].split('search_')[-1]\n",
     "        result_count = result_count + js['meta']['result_count']\n",
     "        temp = np.concatenate((temp, js['data']))\n",
+    "        \n",
+    "        for d in js['data']:\n",
+    "            text_list.append(d['text'])\n",
+    "        \n",
     "        f.close()\n",
-    "    data_list.append({'name': name, 'result_count': result_count, 'data': temp})\n",
-    "    # data_list.append({'name': name, 'data': temp})\n"
+    "    data_list.append({'name': name, 'result_count': result_count, 'data': temp})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "7aa9414f-b8af-4878-9cf8-ca2b06a6d9d3",
    "metadata": {},
    "outputs": [
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "b07604c6-1df9-46dd-8ae0-b788da20ba7a",
    "metadata": {},
    "outputs": [
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "96cb4e27-ce9a-4e16-b683-67719a5d24d8",
    "metadata": {},
    "outputs": [
@@ -255,7 +258,7 @@
        "[85 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "392f5be6-2c2f-469e-835a-965d610f40f6",
    "metadata": {},
    "outputs": [
@@ -427,7 +430,7 @@
        "5108  [{'text': 'RT @ndelriego: This thread will be ...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,43 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "263ff1c7-d305-457d-8986-b14030ef63c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "494    [{'created_at': '2016-07-17T19:10:52.000Z', 'a...\n",
-      "Name: data, dtype: object\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qg/h_dtq0dj0951c9q0d51nkn0m0000gn/T/ipykernel_2679/2043700576.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Na Li'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdocs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# list of strings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBERTopic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"multilingual\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/qg/h_dtq0dj0951c9q0d51nkn0m0000gn/T/ipykernel_2679/2043700576.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Na Li'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdocs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# list of strings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBERTopic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"multilingual\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# source: https://towardsdatascience.com/interactive-topic-modeling-with-bertopic-1ea55e7d73d8#:~:text=BERTopic%20is%20a%20topic%20modeling,words%20in%20the%20topic%20descriptions.\n",
     "from bertopic import BERTopic\n",
     "\n",
     "# testing\n",
-    "test = data[data['name'] == 'Na Li']['data']\n",
-    "print(test)\n",
-    "# docs = [p['text'] for p in test] # list of strings\n",
+    "\n",
+    "# test = data[data['name'] == 'Na Li']['data']\n",
+    "# # print(test)\n",
+    "# docs = [p[0] for p in test] # list of strings\n",
     "# print(docs)\n",
-    "# model = BERTopic(language=\"multilingual\")\n",
-    "# topics, probabilities = model.fit_transform(docs)\n",
-    "# model.get_topic_freq().head()\n",
+    "model = BERTopic(language=\"multilingual\")\n",
+    "topics, probabilities = model.fit_transform(text_list)\n",
+    "model.get_topic_freq().head()\n",
     "\n",
     "# for person in data[data['result_count'] > 0]:\n",
     "#     person_data = person['data']\n",
@@ -486,6 +469,32 @@
     "\n",
     "\n",
     "# ignore topic -1 (no topic assigned)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "936d3f66-8dbc-4aa8-bb0e-7dda9bb4d118",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Leon Deandre Simpson, 39 : #IHateTimWaterman',\n",
+       " '@athr9 Rubi Guerra, Renato Rodríguez, Ana Teresa Torres, Antonia Palacios, Teresa de la Parra, Israel Centeno, Ricardo Azuaje, Juan Carlos Méndez Guédez, Martha Kornblith, Manón Kübler, Juan Carlos Chirinos, Ramón Palomares, José Antonio Ramos Sucre, Yolanda Pantin... una lista al azar.',\n",
+       " 'RT @venepoetics: @capa1010 A quick, very incomplete &amp; very personal list:\\nTeresa de la Parra, Ifigenia\\nJuan Sánchez Peláez, all his poetry…',\n",
+       " 'RT @venepoetics: @capa1010 A quick, very incomplete &amp; very personal list:\\nTeresa de la Parra, Ifigenia\\nJuan Sánchez Peláez, all his poetry…',\n",
+       " '@capa1010 A quick, very incomplete &amp; very personal list:\\nTeresa de la Parra, Ifigenia\\nJuan Sánchez Peláez, all his poetry\\nJosé Antonio Ramos Sucre, all his poetry\\nRenato Rodríguez, El bonche\\nIsrael Centeno, Calletania\\nAntonia Palacios, all of her poetry\\nRómulo Gallegos, Doña Bárbara\\n[...]']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# combining every tweet into list of strings\n",
+    "text_list[:5]"
    ]
   },
   {
