--- a/Bertopic.ipynb
+++ b/Bertopic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c2f97f8d",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "4  Aaron Carlos Martinez      Aaron Carlos Martinez  18 : #IHateTimWaterman"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,24 +94,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "26d868b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from bertopic import BERTopic\n",
-    "import bertopic"
+    "from bertopic import BERTopic\n",
+    "# import bertopic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "08e52ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 16, 4, 16, 7, 4, 16, 4, 9, 9, 4, 16, 16, 5, 5, 7, 9, 4, -1, -1, 12, 4, 5, 5, 5, 5, 4, 5, 5, 5, 5, 5, 4, 0, 4, 0, 6, 0, 5, 5, 0, 0, 0, 0, 5, 11, 7, 0, 10, 10, 10, 10, 0, 10, 0, 17, -1, 10, 0, -1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 2, 2, 12, 2, 2, 11, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 11, 0, 2, 0, 2, 2, 11, 2, 11, 0, -1, 15, -1, 0, 17, -1, -1, 0, 0, -1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, -1, 3, 10, 10, 10, 10, 0, 0, 3, 3, 3, 3, 3, 3, 3, 3, -1, 3, 3, 11, -1, -1, -1, -1, -1, -1, -1, 8, 8, 8, 11, -1, 4, -1, 1, 1, 1, -1, 4, -1, -1, -1, -1, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 4, 1, 1, 8, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, -1, 1, 1, 4, 16, 4, 16, 5, 5, 5, 0, 4, -1, 4, 1, 1, 1, 16, 0, 5, 5, 0, -1, -1, -1, -1, -1, -1, -1, -1, -1, 8, 4, 10, 10, 10, 10, 10, 0, 0, 0, 0, 0, -1, -1, -1, 0, 0, -1, 0, -1, 10, -1, -1, 7, -1, 7, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 7, -1, -1, -1, -1, 0, 17, 17, -1, 12, 6, 6, 12, 6, -1, 6, 6, -1, 6, 7, 6, 7, -1, 7, 12, -1, 12, 12, 6, 7, 6, -1, 6, -1, -1, -1, 6, -1, -1, -1, 6, 6, -1, 17, 17, 17, 17, -1, 6, -1, -1, 7, 6, 7, -1, 17, 12, 7, 7, -1, 7, 6, -1, 6, 12, 6, 17, 7, -1, 12, 12, -1, 12, -1, 12, 7, -1, 12, -1, 7, 0, -1, 0, -1, -1, 6, 1, 1, 6, -1, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 12, 0, -1, 4, 8, 8, 8, 0, 0, 0, 8, 8, 8, 8, 8, 0, -1, -1, 0, 0, 0, 0, 8, 8, 8, 8, 0, 0, 0, 0, 0, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 17, 15, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 16, 0, 4, 16, 13, 4, 9, 4, 16, 9, 4, 5, 5, 5, 5, 4, -1, 4, 0, 14, 14, 11, 11, 13, 0, 13, 13, 11, 11, 13, 11, 11, 11, 13, 13, 13, 11, 13, 13, 13, 13, 14, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the Bertopic model with the desired number of topics\n",
-    "model = BERTopic(language=\"multilingual\")\n",
+    "model = BERTopic(language=\"multilingual\") # num_topics=100 is good amount\n",
     "\n",
     "# Fit the model to the Twitter data\n",
     "topics, probabilities = model.fit_transform(df.head(500)['text_combine'])\n",
@@ -120,7 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
+   "id": "d8c564f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(topics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "ec33baf7",
    "metadata": {},
    "outputs": [
@@ -128,28 +157,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0      False\n",
-      "1      False\n",
-      "2      False\n",
-      "3      False\n",
-      "4      False\n",
-      "       ...  \n",
-      "495    False\n",
-      "496    False\n",
-      "497    False\n",
-      "498    False\n",
-      "499    False\n",
-      "Length: 500, dtype: bool\n"
+      "0\n"
      ]
     }
    ],
    "source": [
     "# Filter the DataFrame based on the topics of interest\n",
-    "topics_of_interest = ['homicide', 'gun', 'shooting', 'violence', 'stab', 'rip', 'rest in peace', 'coroner', 'dead', 'body']\n",
-    "\n",
+    "# topics_of_interest = ['homicide', 'gun', 'shooting', 'violence', 'stab', 'rip', 'rest in peace', 'coroner', 'dead', 'body']\n",
+    "topics_of_interest = [] # list of topic numbers; TODO: divide work among colleagues (20%), extract relevant topics\n",
     "# TODO: mask is work in progress\n",
     "mask = pd.DataFrame(topics).isin(topics_of_interest).any(axis=1)\n",
-    "print(mask)"
+    "print(sum(mask))"
    ]
   },
   {
@@ -187,7 +205,8 @@
    ],
    "source": [
     "for t in model.get_topic_freq().head(10)['Topic']:\n",
-    "    print(f\"{model.get_topic(t)}\\n\")"
+    "    print(f\"{model.get_topic(t)}\\n\")\n",
+    "    # TODO: print index and top ten words for the topic"
    ]
   },
   {
